--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 #menubarcontainer{
     width: auto;
-    height: 40px;
+    height: auto;
     background-color: #AE9D55    
 }
 #menubar a{
@@ -65,6 +65,7 @@ body{
     height: 100vh;
     background-size: cover;
     background-position: center;
+    font-size: 22px;
 }
 hr{
     
@@ -127,7 +128,12 @@ hr{
 .form button:hover, .form button:active{
     background: #AE9D15;
 }
-.about ul{
+.about {
     color: white;
     background: rgba(0,0,0,0.4);
+}
+#about-container{
+    width: 1090px;
+    margin: 0 auto;
+   
 }
