--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 #menubar a{
     font-size: 22px;
     padding: 0 10px;
-    border-right: 1px solid #BB4545;
+    border-right: 1px solid #ffffff;
     position: relative;
     float: right
 }
@@ -23,7 +23,12 @@
 
 #menubar input[type=text]{
     height: 40px;
-    width: 300px
+    width: 300px;
+    background-color: rgb(239, 224, 162);
+    font-family: "dosis","roboto", sans-serif;
+    font-size: 100%;
+    font-style: italic;
+    font-weight: bolder;
 }
 
 a{
@@ -52,6 +57,11 @@ a:hover{
 }
 body{
     font-family: 'Dosis', 'Roboto',sans-serif;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/bg1.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    color: #ffffff;
 }
 hr{
     
@@ -60,8 +70,34 @@ hr{
 }
 #menubar button{
     height: 40;
+    width:90px;
     color: white;
     background-color: #ae9d55;
     font-family: dosis;    
-    padding: none;    
+    padding: none;   
+    font-weight: bolder;
+    }
+#menubar button:hover{
+    text-transform: uppercase;
+    color: black;
+}
+
+.sidebar{
+    width: 25%;
+    height: 100%;
+    float: left;
+
+}
+
+.bar-item{
+    font-size: 22px;
+    
+}
+#main{
+    background: rgba(0,0,0,0.4);
+}
+
+.question-title{
+    text-decoration: underline;
+    font-size: 145%
 }
